# amman-python-401d5

./: .gitignore
class-01/: README.md
class-01/demo/some-project/: pyproject.toml
class-01/demo/some-project-2/: README.md  pyproject.toml
class-01/demo/some-project-2/some_project_2/: lib.py  main.py
class-01/demo/some-project-2/tests/: test_some_project_2.py
class-02/: README.md
class-03/: README.md
class-03/demo/madlib_demo/: pyproject.toml
class-03/demo/madlib_demo/assets/: test.txt  test2.txt  test3.txt  test4.txt
class-03/demo/madlib_demo/madlib_demo/: madlib.py
class-03/demo/madlib_demo/tests/: test_madlib.py  test_madlib_demo.py
class-04/: README.md
class-06/: README.md
class-06/demo/counter/: counting.ipynb  pyproject.toml
class-07/: README.md
class-07/linked_list/: linked_list.py  variables.excalidraw
class-08/: README.md
class-11/: Feedback.md  Notes.md  README.md
class-12/: README.md
class-12/demos/cereal/: cereal.ipynb  pyproject.toml
class-14/: README.md
class-14/lab/: README.md
class-14/seaborn/: fun_with_seaborn.ipynb  pyproject.toml
class-14/warm-up/: warm-up.md
class-16/: README.md
class-16/demo/dsa_bowlers/: bowler.py  test_bowler.py  test_tree_bowlers.py
class-17/: README.md
class-17/demo/bayt/: file.html
class-18/: README.md
class-18/demo/crypto/: is_english_word.py  number_cipher.py
class-19/: README.md
class-19/demo/fake/: contacts.txt  fake.py  new_file.txt  pyproject.toml
class-20/: README.md
class-26/: README.md  django.excalidraw
class-26/demos/django-things/: db.sqlite3  pyproject.toml
lab-projects/game-of-greed/game_of_greed/: game.py
prework/: setup.md
(+7 files in other folders)
