[tool.poetry]
name = "amman-academy-demo"
version = "0.1.0"
description = ""
authors = ["Dario Thornhill <dariothornhill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.0.3"
pandas = "^1.3.1"
Pillow = "^8.3.1"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
tensorflow = "^2.5.0"
streamlit = "^0.85.1"
geopandas = "^0.9.0"
pyproj = "^3.1.0"
Django = "^3.2.6"
gunicorn = "^20.1.0"
djangorestframework-simplejwt = "^4.7.2"
djangorestframework = "^3.12.4"
djangorestframework-gis = "^0.17"
streamlit-folium = "^0.4.0"
folium = "^0.12.1"
plotly = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
